2 new features+ minor improvements